--- a/프로젝트 3/(p)Temp_visualize.ipynb
+++ b/프로젝트 3/(p)Temp_visualize.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "f369bfee-59c8-4047-bc6f-c032a2106b66",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "6d8c6f7c-20ac-467c-94cb-788218f6b051",
    "metadata": {
     "scrolled": true
@@ -435,7 +435,7 @@
        "12265          0               0               15             915  0.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "6c8bdd6f-da24-4d1e-a273-3289a9251b96",
    "metadata": {},
    "outputs": [],
@@ -466,6 +466,241 @@
     "\n",
     "percentage_to_drop = int(len(sorted_KAN_df) * 0.005)\n",
     "PER1_KAN = sorted_KAN_df[percentage_to_drop:-percentage_to_drop]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "714d8f83-43c5-4214-b8f0-405e0884b26b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>입항횟수_연도</th>\n",
+       "      <th>입항횟수_횟수</th>\n",
+       "      <th>순번</th>\n",
+       "      <th>시설사용횟수</th>\n",
+       "      <th>신고톤수</th>\n",
+       "      <th>접안_대기시간_NumDays</th>\n",
+       "      <th>Service_Time_NumDays</th>\n",
+       "      <th>접안_대기시간_일</th>\n",
+       "      <th>접안_대기시간_시간</th>\n",
+       "      <th>접안_대기시간_분</th>\n",
+       "      <th>Service_Time_일</th>\n",
+       "      <th>Service_Time_시간</th>\n",
+       "      <th>Service_Time_분</th>\n",
+       "      <th>대기율</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>19190.000000</td>\n",
+       "      <td>19190.000000</td>\n",
+       "      <td>18987.000000</td>\n",
+       "      <td>18987.000000</td>\n",
+       "      <td>18987.000000</td>\n",
+       "      <td>19190.000000</td>\n",
+       "      <td>19190.000000</td>\n",
+       "      <td>19190.000000</td>\n",
+       "      <td>19190.000000</td>\n",
+       "      <td>19190.000000</td>\n",
+       "      <td>19190.000000</td>\n",
+       "      <td>19190.000000</td>\n",
+       "      <td>19190.000000</td>\n",
+       "      <td>19190.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2021.992183</td>\n",
+       "      <td>15.820636</td>\n",
+       "      <td>816.427134</td>\n",
+       "      <td>1.995997</td>\n",
+       "      <td>98.122522</td>\n",
+       "      <td>0.185722</td>\n",
+       "      <td>2.760240</td>\n",
+       "      <td>0.185722</td>\n",
+       "      <td>1.514904</td>\n",
+       "      <td>362.655185</td>\n",
+       "      <td>2.760240</td>\n",
+       "      <td>9.842001</td>\n",
+       "      <td>4592.610370</td>\n",
+       "      <td>0.062249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.088067</td>\n",
+       "      <td>26.403625</td>\n",
+       "      <td>477.923338</td>\n",
+       "      <td>2.518421</td>\n",
+       "      <td>199.060907</td>\n",
+       "      <td>2.786103</td>\n",
+       "      <td>7.372852</td>\n",
+       "      <td>2.786103</td>\n",
+       "      <td>4.357549</td>\n",
+       "      <td>4057.801646</td>\n",
+       "      <td>7.372852</td>\n",
+       "      <td>6.508396</td>\n",
+       "      <td>10654.545959</td>\n",
+       "      <td>0.186492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2021.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.002000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-362.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-362.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-520447.000000</td>\n",
+       "      <td>-0.034786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2022.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>405.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.064000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>505.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2022.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>809.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>9.923000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>1675.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2022.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>1213.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>93.432000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>4729.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2022.000000</td>\n",
+       "      <td>215.000000</td>\n",
+       "      <td>1890.000000</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>999.000000</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>526110.000000</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>526470.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            입항횟수_연도       입항횟수_횟수            순번        시설사용횟수          신고톤수  \\\n",
+       "count  19190.000000  19190.000000  18987.000000  18987.000000  18987.000000   \n",
+       "mean    2021.992183     15.820636    816.427134      1.995997     98.122522   \n",
+       "std        0.088067     26.403625    477.923338      2.518421    199.060907   \n",
+       "min     2021.000000      1.000000      1.000000      1.000000      1.002000   \n",
+       "25%     2022.000000      2.000000    405.000000      1.000000      3.064000   \n",
+       "50%     2022.000000      7.000000    809.000000      1.000000      9.923000   \n",
+       "75%     2022.000000     16.000000   1213.000000      2.000000     93.432000   \n",
+       "max     2022.000000    215.000000   1890.000000     33.000000    999.000000   \n",
+       "\n",
+       "       접안_대기시간_NumDays  Service_Time_NumDays     접안_대기시간_일    접안_대기시간_시간  \\\n",
+       "count     19190.000000          19190.000000  19190.000000  19190.000000   \n",
+       "mean          0.185722              2.760240      0.185722      1.514904   \n",
+       "std           2.786103              7.372852      2.786103      4.357549   \n",
+       "min           0.000000           -362.000000      0.000000      0.000000   \n",
+       "25%           0.000000              0.000000      0.000000      0.000000   \n",
+       "50%           0.000000              1.000000      0.000000      0.000000   \n",
+       "75%           0.000000              3.000000      0.000000      0.000000   \n",
+       "max         365.000000            365.000000    365.000000     23.000000   \n",
+       "\n",
+       "           접안_대기시간_분  Service_Time_일  Service_Time_시간  Service_Time_분  \\\n",
+       "count   19190.000000    19190.000000     19190.000000    19190.000000   \n",
+       "mean      362.655185        2.760240         9.842001     4592.610370   \n",
+       "std      4057.801646        7.372852         6.508396    10654.545959   \n",
+       "min         0.000000     -362.000000         0.000000  -520447.000000   \n",
+       "25%         0.000000        0.000000         4.000000      505.500000   \n",
+       "50%         0.000000        1.000000         9.000000     1675.000000   \n",
+       "75%         0.000000        3.000000        15.000000     4729.500000   \n",
+       "max    526110.000000      365.000000        23.000000   526470.000000   \n",
+       "\n",
+       "                대기율  \n",
+       "count  19190.000000  \n",
+       "mean       0.062249  \n",
+       "std        0.186492  \n",
+       "min       -0.034786  \n",
+       "25%        0.000000  \n",
+       "50%        0.000000  \n",
+       "75%        0.000000  \n",
+       "max        6.000000  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KAN_df.describe()"
    ]
   },
   {
